Clean-up.